--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ background-color: rgb(121, 121, 121) !important;
 position: relative;
 transition: .3s;
 margin: 0px 4px;
-} */
+}
  .owl-dot.active span{
   background-color: gold !important;
 } .owl-dot.active {
@@ -717,6 +717,10 @@ footer{
 .price-bone{
   font-size: 35px !important;
 }
+.price-bone span{
+  font-size: 17px;
+  font-family: 'hlvt';
+}
 .cardp{
   padding: 40px 20px;
   background: rgb(242, 242, 242);
@@ -728,30 +732,210 @@ footer{
   color: black;
   font-size: 17px;
   font-family: 'hlvt';
-  text-align: center;
+  text-align: left;
   margin: 3px 0;
 }
+
 .inner-p{
   margin: 20px;
 }
+.checked{
+  display: flex;
+  align-items: center;
+}
+.checked i{
+  margin-right: 10px;
+}
 .cardp a{
   color: black;
-  border: 1px solid black;
+  border: 1px solid rgb(255, 233, 65);
   padding: 12px 24px;
   display: block;
   width: max-content;
   margin: auto;
-  margin-top: 15px;
+  margin-top: 18px;
   border-radius: 10px;
   transition: .5s;
+  background: rgb(255, 233, 65);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
 }
 .cardp a:hover{
-  background: rgb(255, 233, 65);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.671);
 }
 
 .img-slide img{
   width: 100%;
 }
+
+
+
+
+
+
+
+
+
+.container2 {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+}
+
+#contact {
+  background: #F9F9F9;
+  padding: 25px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
+}
+
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #4CAF50;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+#contact button[type="submit"]:hover {
+  background: #43A047;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.copyright {
+  text-align: center;
+}
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+
+::-webkit-input-placeholder {
+  color: #888;
+}
+
+:-moz-placeholder {
+  color: #888;
+}
+
+::-moz-placeholder {
+  color: #888;
+}
+
+:-ms-input-placeholder {
+  color: #888;
+}
+.modul2{
+  width: 100%;
+ height: 100vh; 
+ display: flex;
+ align-items: center;
+ background-color: rgba(0, 0, 0, 0.425);
+ position: fixed;
+ z-index: 100000000;
+ top: 0;
+ right: 0;
+ transform: translateX(-100%);
+ transition: .5s;
+}
+.modul2.active{
+  transform: translateX(-0%) !important;
+}
+.x i{
+  color: rgb(182, 182, 182);
+  font-size: 30px;
+  cursor: pointer;
+  transition: .3s;
+  }
+  .x i:hover{
+      color: rgb(250, 61, 61);
+      transform: rotate(180deg);
+  }
+  .x{
+      position: absolute;
+      top: 5%;
+      right: 5%;
+  }
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 1200px) {
   .pc-format {
     display: none !important;
@@ -886,6 +1070,11 @@ footer{
       .logo {
         width: 45px;
       }
+}
+@media (max-width: 600px){
+  .owl-dots{
+    width: 80%!important;
+  }
 }
 @media (max-width: 500px) {
   .header-info h1 {
